--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -24,9 +24,9 @@
       </div>
     </div>
     <div class="row position-relative mb-5">
-      <span id="chef--count" #chefcount class="chef--count text-center">+1</span>
+      <span id="chef--count" #chefcount class="chef--count text-center">+{{myPoints}}</span>
       <span id="chef--count-total" class="chef--count-total">{{article?.like_score}}</span>
-      <span id="chef--count-decrement" #chefdecr class="chef--count-decrement" (click)="revertLike(article)"><i class="fas fa-times"></i></span>
+      <!-- <span id="chef--count-decrement" #chefdecr class="chef--count-decrement" (click)="revertLike(article)"><i class="fas fa-times"></i></span> -->
       <button class="chef-button button-xl button-circle">                
         <span class="chef-button--default" (click)="toggleIcon($event,article)" > <!--[ngClass]="!icon__default?'chef-button--default':'chef-button--active'"-->
           <span class="chef-icon-container">
@@ -43,3 +43,26 @@
   </div>
 </section>
 <blog-footer></blog-footer>
+
+<button class="d-none" #promptLoginModal id="promptLoginModal" data-toggle="modal" data-target="#loginModal"></button>
+<div id="loginModal" #loginModal class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Log in</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body text-center">
+          <div class="m-5">
+            <label class="d-block">Login en beoordeel dit artikel.</label>
+            <a class="" (click)="onCallToAction('login')" style="color: darkcyan; cursor: pointer;">Login</a>
+          </div>
+          <div class="m-5">
+            <label class="d-block mb-3">Nog geen account?</label>
+            <a class="button" (click)="onCallToAction('register')">Join ons!</a>
+          </div>
+        </div>          
+      </div>
+    </div>    
+  </div>
