--- a/src/app/blog-footer/blog-footer.component.html
+++ b/src/app/blog-footer/blog-footer.component.html
@@ -1,18 +1,18 @@
 <footer class="container-fluid py-0">
   <div class="container footer-container">
-    <div class="row">
-      <div class="col-3">
-        <h5>Support</h5>
+    <div class="row justify-content-center">
+      <div class="col-12 text-center">
+        <!-- <h5>Support</h5> -->
         <ul style="margin: 0; padding: 0; list-style: none;">
-          <li style="padding: 0; margin: 0;">
+          <li class="d-inline" style="padding: 0; margin: 0;">
             FAQ
           </li>
-          <li>Contacteer ons</li>
-          <li>Feedback</li>
-          <li>Advertise</li>
-          <li>Privacy policy</li>
-          <li>Press</li>
-          <li routerLink="/create_recipe"><i class="fas fa-carrot"></i></li>
+          <li class="d-inline mx-5">Contacteer ons</li>
+          <li class="d-inline mx-5">Feedback</li>
+          <li class="d-inline mx-5">Advertise</li>
+          <li class="d-inline mx-5">Privacy policy</li>
+          <li class="d-inline mx-5">Press</li>
+          <li class="d-inline mx-5" routerLink="/create_recipe"><i class="fas fa-carrot"></i></li>
         </ul>
       </div>
     </div>
