--- a/src/app/blog-navbar/blog-navbar.component.html
+++ b/src/app/blog-navbar/blog-navbar.component.html
@@ -51,7 +51,7 @@
   <div class="container upper-menu-container" [style.padding.rem]="blnNarrow ? '0' : '1'">
     <div class="row p-0">
       <div class="col-12 upper-menu">
-        <ul class="d-block d-md-flex upper-menu-list p-0 m-0">
+        <ul class="d-block d-md-flex upper-menu-list m-0 mx-5" style="padding: 0px 100px 0px 100px;">
           <li class="d-block d-md-inline-block upper-menu-list-item">
             <a routerLink="/recipes">gezonder recepten</a>            
           </li>
@@ -61,9 +61,9 @@
           <li class="d-block d-md-inline-block upper-menu-list-item">
             <a routerLink="/courses">happy plate academy</a>
           </li>
-          <li class="d-block d-md-inline-block upper-menu-list-item">
+          <!-- <li class="d-block d-md-inline-block upper-menu-list-item">
             <a routerLink="/community">Community</a>
-          </li>          
+          </li>           -->
         </ul>
       </div>
     </div>
