--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,123 @@
-<p>
-  profile works!
-</p>
+<blog-navbar></blog-navbar>
+<div class="container p-0">
+  <mat-sidenav-container layout="column" class="" style="height: calc(100vh - 125px);">
+    <mat-sidenav mode="side" opened>
+      <!-- <mat-toolbar class=""> -->
+        <mat-card class="example-card" style="box-shadow: none; border-bottom: 1px solid #e0e0e0;">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image">
+              <i class="fas fa-user fa-3x"></i>
+            </div>
+            <mat-card-title>{{user.fullName}}</mat-card-title>
+            <mat-card-subtitle>{{user.email}}</mat-card-subtitle>
+          </mat-card-header>                    
+        </mat-card>        
+      <!-- </mat-toolbar> -->
+      <mat-list role="list">
+        <mat-list-item matRipple [matRippleColor]="'lightgrey'" role="listitem">
+          <a style="cursor: pointer;">
+            <mat-icon mat-list-icon class="mr-3" style="color: #737373;"><i class="fas fa-address-card"></i></mat-icon>
+            <span class="mr-3" style="color: #737373;">Dashboard</span>
+          </a>
+        </mat-list-item>
+        <mat-list-item matRipple [matRippleColor]="'lightgrey'"  role="listitem">
+          <a style="cursor: pointer;">
+            <mat-icon mat-list-icon class="mr-3" style="color: #737373;"><i class="fas fa-user-friends"></i></mat-icon>
+            <span class="mr-3" style="color: #737373;">Vrienden</span>
+            <span class="badge badge-warning" style="color: white;">soon</span>
+          </a>
+        </mat-list-item>
+        <mat-list-item matRipple [matRippleColor]="'lightgrey'"  role="listitem">
+          <a style="cursor: pointer;">
+            <mat-icon mat-list-icon class="mr-3" style="color: #737373;"><i class="far fa-comment-alt"></i></mat-icon>
+            <span class="mr-3" style="color: #737373;">Berichten</span>
+            <span class="badge badge-warning" style="color: white;">soon</span>
+          </a>
+        </mat-list-item>
+        <mat-divider></mat-divider>
+        <h6 class="subheader m-2" style="color: lightgrey">Managment</h6>
+        <mat-list-item matRipple [matRippleColor]="'lightgrey'"  role="listitem">
+          <a style="cursor: pointer;">
+            <mat-icon mat-list-icon class="mr-3" style="color: #737373;"><i class="fas fa-cog"></i></mat-icon>
+            <span class="mr-3" style="color: #737373;">Settings</span>
+            <span class="badge badge-warning" style="color: white;">soon</span>
+          </a>
+        </mat-list-item>
+      </mat-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <mat-tab-group (selectedIndexChange)="getData($event)">
+        <mat-tab label="Gezondheidsprofiel">
+          <div class="row m-0">
+            <div class="col-12 p-0 text-center">
+              <h1>Profiel in ontwikkeling</h1>
+                <!-- <a routerLink="/create-health-profile" class="btn btn-warning">Creëer gezondheidprofiel</a> -->
+            </div>
+          </div>
+          
+        </mat-tab>
+        <mat-tab label="beoordelingen">          
+          <mat-list>
+            <mat-list-item *ngFor="let rates of recipeRates; let i = index;" class="my-2" style="height: unset;">
+              <mat-card [routerLink]="['/recipe',rates.recipeId._id]" class="w-100" style="cursor: pointer;">                
+                <div class="d-inline mr-5">{{rates.dateStr}}</div>
+                <div class="d-inline mr-5">{{rates.recipeId.name}}</div>
+                <div class="d-inline" style="float: right;">
+                  <div class="d-inline mx-0">
+                    <i class="fas fa-star p-2" [style.color]="rates?.value > 0.5?'orange':'lightgrey'"></i>
+                    <i class="fas fa-star p-2" [style.color]="rates?.value > 1.5?'orange':'lightgrey'"></i>
+                    <i class="fas fa-star p-2" [style.color]="rates?.value > 2.5?'orange':'lightgrey'"></i>
+                    <i class="fas fa-star p-2" [style.color]="rates?.value > 3.5?'orange':'lightgrey'"></i>
+                    <i class="fas fa-star p-2" [style.color]="rates?.value > 4.5?'orange':'lightgrey'"></i>                    
+                  </div>
+                </div>
+              </mat-card>
+            </mat-list-item>
+          </mat-list>          
+        </mat-tab>
+        <mat-tab label="likes">
+          <mat-list>
+            <mat-list-item *ngFor="let likes of articleLikes; let i = index;" class="my-2" style="height: unset;">
+              <mat-card [routerLink]="['/article',likes.articleId._id]" class="w-100" style="cursor: pointer;">                
+                <div class="d-inline mr-5">{{likes.dateStr}}</div>
+                <div class="d-inline mr-5">{{likes.articleId.name}}</div>
+                <div class="d-inline" style="float: right;">
+                  {{likes.value}} keer applaus.
+                </div>
+              </mat-card>
+            </mat-list-item>
+          </mat-list>          
+        </mat-tab>
+        <!-- <mat-tab label="opgeslaan">
+          <mat-list>
+            
+          </mat-list>          
+        </mat-tab> -->
+      </mat-tab-group>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
+<!-- <div class="container-fluid">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 p-0">
+        <mat-tab-group (selectedIndexChange)="getData($event)">
+          <mat-tab label="profiel">
+            <div class="row">
+              <div class="col-8"></div>
+              <div class="col-4">
+
+              </div>
+            </div>
+          </mat-tab>
+          <mat-tab label="beoordelingen">
+            beoordelingen
+          </mat-tab>
+          <mat-tab label="likes">
+            likes
+          </mat-tab>
+        </mat-tab-group>
+      </div>
+    </div>
+  </div>
+</div> -->
